# artistic_photos

./: .env.sample  .gitignore  Procfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
artistic/: __init__.py  kaggle_script.py  mail.py  routes.py
artistic/kaggle/: __init__.py  blur.py  nst.py  palette.py  transfer_color.py
artistic/models/: __init__.py  base.py  image.py  palette.py  user.py
artistic/photo/: __init__.py  black_and_white.py  blur.py  palette.py  pencil_sketch.py  sharpen.py
artistic/service/: artistic_photo.py
artistic/static/: vue.js
artistic/static/home/: index.js
artistic/static/scripts/home/: index.js
artistic/static/style/: style.css
artistic/templates/: application.html
artistic/templates/home/: index.html  login.html  reset_password.html  reset_token.html
artistic/templates/partials/: _artistic_image.html  _edit.html  _palette.html  _starting_image.html  _style_image.html
artistic/templates/partials/modals/: _delete_image.html  _delete_palette.html  _nst_help.html  _palette_mapping.html
artistic/views/: __init__.py  auth.py  home.py  image.py  palettes.py
artistic/views/api/: __init__.py
artistic/views/api/v1/: __init__.py  authenticate.py  images.py  palettes.py
migrations/: env.py
migrations/versions/: 0c86238423fb_.py  12a7502b0990_.py  2155c6dcf735_.py  24fb3b504008_.py  51c7c9f7cc29_.py  635b20d0bd65_.py  881f590b7c5f_.py  a403585c54e6_.py  ac8c084ad297_.py  c00ccb1e7047_.py  c41ff70698dd_.py  f090bb003399_.py
tests/: test_artistic.py
