[tool.poetry]
name = "artistic"
version = "0.1.0"
description = ""
authors = ["Trevor Jones <trevordavidjones@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flake8 = "^3.9.0"
isort = "^5.8.0"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
